<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".BMIhistoryActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green">

        <TextView
            android:id="@+id/BMIhistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/BMIhistory"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tableHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green2">

            <TextView
                android:id="@+id/date"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/dateColumn"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weightColumn"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/bmi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/BMIcolumn"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/result"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/resultColumn"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white" />

        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/BMIlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list" />
    </LinearLayout>

</LinearLayout>