<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/history"
                android:layout_width="37dp"
                android:layout_height="61dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/history" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:text="@string/weightText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/green" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/heightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/heightText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/green" />

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/BMItext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/BMItext"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/BMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/BMI" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/resultText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/result" />

            <Button
                android:id="@+id/calculateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="130dp"
                android:layout_marginBottom="40dp"
                android:background="@color/green"
                android:text="@string/calculateBtn"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>